tdf#125041 fix hyperlinks to IDN websites

Revert "tdf#86087 Open relative links in Writer"

This reverts commit 4b9e237850efe36f7e35d65e14d6953f1e1f3a45.

The reverted commit caused a regression in the handling of
internationalized domain names: these non-ASCII URLs were converted
to file URIs.

Change-Id: Ia481aa1199d20083b72f9f8571992e40b3fc2e77
Reviewed-on: https://gerrit.libreoffice.org/76804
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>